[gd_scene load_steps=12 format=3 uid="uid://dbs6ifqubs4eq"]

[ext_resource type="Script" path="res://scenes/shop_scenes/shop_ui_elements/shop_slots/dice_shop_slot/dice_shop_slot.gd" id="1_qweom"]
[ext_resource type="Resource" uid="uid://cqg0w8s733dit" path="res://data/player_data/player_resources/player_stats.tres" id="2_kaefr"]
[ext_resource type="Resource" uid="uid://duavcnajrksmb" path="res://data/dice_data/dice_stats_data/dice_resources/common/d1.tres" id="3_cadfl"]
[ext_resource type="FontFile" uid="uid://doma2nwpphsme" path="res://assets/fonts/monogram.ttf" id="4_e4xrt"]
[ext_resource type="StyleBox" uid="uid://cn7r2uxae8n" path="res://assets/shop_slot/shop_unit_card_bottom.tres" id="5_nf1re"]
[ext_resource type="Texture2D" uid="uid://dcf5im1gk6ywj" path="res://assets/shop/gold.png" id="6_f1dky"]
[ext_resource type="StyleBox" uid="uid://ceb6xmyuko03f" path="res://assets/shop_slot/shop_unit_card_border.tres" id="7_04afm"]
[ext_resource type="Texture2D" uid="uid://cuqvi8ycym3db" path="res://assets/dice/six sided die.png" id="8_885w6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cbslr"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_03lkr"]
resource_local_to_scene = true
atlas = ExtResource("8_885w6")
region = Rect2(0, 0, 16, 16)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_akppt"]
bg_color = Color(0, 0, 0, 1)

[node name="diceShopSlot" type="Button"]
texture_filter = 1
custom_minimum_size = Vector2(85, 59)
anchors_preset = -1
anchor_right = 0.074
anchor_bottom = 0.091
offset_right = -0.248001
offset_bottom = 0.0319977
theme_override_styles/focus = SubResource("StyleBoxFlat_cbslr")
script = ExtResource("1_qweom")
player_stats = ExtResource("2_kaefr")
dice_stats = ExtResource("3_cadfl")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 85.0
offset_bottom = 59.0
mouse_filter = 2
color = Color(0.205117, 0.205117, 0.205117, 1)

[node name="traits" type="Label" parent="ColorRect"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 0
offset_left = 6.0
offset_top = 1.0
offset_right = 53.0
offset_bottom = 38.0
theme_override_constants/line_spacing = -1
theme_override_fonts/font = ExtResource("4_e4xrt")
text = "???
???
???"

[node name="bottomSection" type="Panel" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -19.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
theme_override_styles/panel = ExtResource("5_nf1re")

[node name="MarginContainer" type="MarginContainer" parent="bottomSection"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.059
anchor_right = 0.991
anchor_bottom = 0.857
offset_left = 1.31
offset_top = 3.46
offset_right = 139.09
offset_bottom = 10.749
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)

[node name="HBoxContainer" type="HBoxContainer" parent="bottomSection/MarginContainer"]
layout_mode = 2

[node name="diceName" type="Label" parent="bottomSection/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("4_e4xrt")
theme_override_font_sizes/font_size = 32
text = "D1"

[node name="goldContainer" type="HBoxContainer" parent="bottomSection"]
layout_mode = 2
offset_left = 70.0
offset_top = 2.0
offset_right = 90.0
offset_bottom = 28.0
scale = Vector2(0.505, 0.505)
theme_override_constants/separation = 0

[node name="goldCost" type="Label" parent="bottomSection/goldContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("4_e4xrt")
theme_override_font_sizes/font_size = 32
text = "1"

[node name="goldSprite" type="TextureRect" parent="bottomSection/goldContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("6_f1dky")
stretch_mode = 3

[node name="border" type="Panel" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = ExtResource("7_04afm")

[node name="diceSprite" type="TextureRect" parent="."]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 0
offset_left = 52.0
offset_top = 7.0
offset_right = 78.0
offset_bottom = 34.0
mouse_filter = 2
texture = SubResource("AtlasTexture_03lkr")
stretch_mode = 4

[node name="placeholder" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_akppt")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
